[gd_scene load_steps=6 format=3 uid="uid://br7j8k2v3m4n5"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_hud_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp_fill"]
bg_color = Color(1, 0.843, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.6, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TopBar" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/TopBar/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "HP: 100/100"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/TopBar/LeftPanel"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="GoldLabel" type="Label" parent="MarginContainer/TopBar/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "Gold: 0"

[node name="Spacer1" type="Control" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterPanel" type="VBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/TopBar/CenterPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "Level 1"
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="MarginContainer/TopBar/CenterPanel"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_xp_fill")
max_value = 100.0
show_percentage = false

[node name="XPLabel" type="Label" parent="MarginContainer/TopBar/CenterPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "0/100 XP"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/TopBar/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "0:00"
horizontal_alignment = 2

[node name="WaveLabel" type="Label" parent="MarginContainer/TopBar/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "Wave 1"
horizontal_alignment = 2

[node name="KillLabel" type="Label" parent="MarginContainer/TopBar/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "Kills: 0"
horizontal_alignment = 2
